# ArchMage_Engine

./: .gitignore  .travis.yml  ArchMage Engine.sln  ArchMageEngine.sln  CMakeCache.txt  CMakeLists.txt  GCCBuild.yml  travis iteration log.txt  travis links.txt
Docs/: BUILD.txt  Doxyfile
Docs/html/: am_a_a_b_b_8h_source.html  (+124 more)
amCore/: amCamera.cpp  amCamera.h  amCameraManager.h  amCore.vcxproj  amCore.vcxproj.filters  amCubemap.cpp  amCubemap.h  amDeviceContext.cpp  amDeviceContext.h  amMaterial.cpp  amMaterial.h  amModel.cpp  amModel.h  amRP_GBuffer.cpp  amRP_GBuffer.h
amGraphicsDX/: amGraphicsDX.vcxproj  amGraphicsDX.vcxproj.filters  amWindow.cpp  amWindow.h
amGraphicsDX_UnitTest/: amGraphicsDX_UnitTest.vcxproj  amGraphicsDX_UnitTest.vcxproj.filters  main.cpp
amInputManager/: amControlerInput.cpp  amControlerInput.h  amInputManager.vcxproj  amInputManager.vcxproj.filters  amKeyboardInput.cpp  amKeyboardInput.h  amMouseInput.cpp  amMouseInput.h  amPrerequisitesInputManager.h
amUtilities/: AABB.cpp  AABB.h  Box2D.cpp  Box2D.h  Capsule.cpp  Capsule.h  Circle2D.cpp  Circle2D.h  Frustrum.cpp  Frustrum.h  Line2D.cpp  Line2D.h  Matix3x3.cpp  Matix3x3.h  OOBB.cpp  OOBB.h  Plane.cpp  Plane.h  Point2D.cpp  Point2D.h  Quaternion.cpp  Quaternion.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  amAllocator.cpp  amAllocator.h  amModule.cpp  amModule.h  amUtilities.vcxproj  amUtilities.vcxproj.filters
amUtilities_UnitTest/: amUtilities_UnitTest.vcxproj  amUtilities_UnitTest.vcxproj.filters  main.cpp
(+277 files in other folders)
